--- a/css/agency.css
+++ b/css/agency.css
@@ -175,7 +175,7 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 header {
-    background-image: url(../img/cover2.png);
+    background-image: url(../img/cover2.PNG);
     background-repeat: none;
     background-attachment: scroll;
     background-position: center center;
